# Briscola-in-5

./: CONTRIBUTING.md  CREDITI_CARTE.md  FILES_TO_UPLOAD.md  INTEGRATION_NOTES.md  ISTRUZIONI_LAN.md  README.md  avvia_mac_linux.sh  avvia_windows.bat  pyproject.toml
src/briscola5/application/: game_service.py
src/briscola5/bots/: greedy_bot.py  random_bot.py  simulator.py
src/briscola5/cli/: base_cli.py
src/briscola5/web/: __init__.py  app.py  main.py  manager.py
src/briscola5/web/engine/: __init__.py  card.py  game_service.py  greedy_bot.py  state.py  trick.py
src/briscola5/web/static/: app.js  index.html  style.css
tests/application/: test_game_service.py
tests/bots/: test_greedy_bot.py  test_random_bot.py
tests/cli/: test_cli.py
tests/web/: test_manager_animation.py
